vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__parse_multiple_entity_declarations.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::design_file,\n\"\\\nentity myent is\nend entity;\n\nentity myent2 is\nend entity myent2;\n\nentity myent3 is\nend myent3;\n\nentity myent4 is\nend;\",)"
---
DesignFile
  DesignUnit
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'myent'
        Keyword(Is)
      EntityDeclarationEpilogue
        Keyword(End)
        Keyword(Entity)
        SemiColon
  DesignUnit
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'myent2'
        Keyword(Is)
      EntityDeclarationEpilogue
        Keyword(End)
        Keyword(Entity)
        Identifier 'myent2'
        SemiColon
  DesignUnit
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'myent3'
        Keyword(Is)
      EntityDeclarationEpilogue
        Keyword(End)
        Identifier 'myent3'
        SemiColon
  DesignUnit
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'myent4'
        Keyword(Is)
      EntityDeclarationEpilogue
        Keyword(End)
        SemiColon
  Eof
