vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__parse_use_clause.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::use_clause, \"use lib1.lib2.lib3.all;\")"
---
UseClause
  Keyword(Use)
  NameList
    Name
      NameDesignatorPrefix
        Identifier 'lib1'
      SelectedName
        Dot
        Identifier 'lib2'
      SelectedName
        Dot
        Identifier 'lib3'
      SelectedName
        Dot
        Keyword(All)
  SemiColon
