vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__use_clause_missing_name.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
use ;

== tree ==
DesignFile
  DesignUnit
    ContextClause
      UseClauseContextItem
        UseClause
          Keyword(Use)
          SemiColon
  Eof

== diagnostics ==
1:4 expected NameList
1:6 expected 'architecture', 'package', 'entity', 'configuration' or 'context'
